# universal-solver-linera

./: Cargo.toml  README.md  linera-net.service
.codesandbox/: tasks.json
.devcontainer/: Dockerfile
client/: README.md  go.mod  go.sum  main.go  main_test.go
client/solver/: client.go  github.go  logger.go  types.go
client/solver/keys/: derivation.go
sandbox/: package-lock.json  package.json
sandbox/src/pages/: index.tsx
src/: contract.rs  lib.rs  service.rs  state.rs
