[package]
name = "universal-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
linera-views = { workspace = true }
base64 = "0.21.7"
sha3 = "0.10.8"
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer", "unstable-oracles"] }
tokio.workspace = true

[[bin]]
name = "solver_contract"
path = "src/contract.rs"

[[bin]]
name = "solver_service" 
path = "src/service.rs" 