[package]
name = "universal-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
linera-views = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299" }
base64 = "0.21.7"
sha3 = "0.10.8"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { git = "https://github.com/jvff/linera-protocol", rev = "26a5299", features = ["test", "wasmer", "unstable-oracles"] }
tokio = "1.39.3"
test-log = "*"

[[bin]]
name = "solver_contract"
path = "src/contract.rs"

[[bin]]
name = "solver_service" 
path = "src/service.rs" 